altera método de register para sanctum
